# ChangeLog for app-misc/carbon-c-relay
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/carbon-c-relay/ChangeLog,v 1.5 2015/05/06 19:30:43 grobian Exp $

  06 May 2015; Fabian Groffen <grobian@gentoo.org> files/carbon-c-relay.initd:
  initd: fix logging

*carbon-c-relay-0.39-r1 (05 May 2015)

  05 May 2015; Fabian Groffen <grobian@gentoo.org>
  +carbon-c-relay-0.39-r1.ebuild, +files/carbon-c-relay.confd,
  +files/carbon-c-relay.initd:
  Revbump for introduction of init-script

*carbon-c-relay-0.39 (11 Apr 2015)

  11 Apr 2015; Fabian Groffen <grobian@gentoo.org> +carbon-c-relay-0.39.ebuild,
  -carbon-c-relay-0.37.ebuild:
  Version bump

*carbon-c-relay-0.37 (22 Dec 2014)

  22 Dec 2014; Fabian Groffen <grobian@gentoo.org> +carbon-c-relay-0.37.ebuild,
  -carbon-c-relay-0.36.ebuild:
  Version bump (today's version)

*carbon-c-relay-0.36 (22 Dec 2014)

  22 Dec 2014; Fabian Groffen <grobian@gentoo.org> +carbon-c-relay-0.36.ebuild,
  +metadata.xml:
  Initial version, just the binary, no support scripts