@@ -4,14 +4,15 @@ Hash: SHA256
 AUX carbon-c-relay.confd 488 SHA256 1f4d47eb3cf1d4590631ce6c82e3695b43ce11e36adef2952d2834d613aacbcc SHA512 e3007bf7e90ab4597eacc1b98967ba808517046a228899ec318dac2115399a0e34612af13b6293c035fa6308058b3ede429dbca1e9185bff7e59b7d22418d910 WHIRLPOOL 64a65f095a06e5166e0cb2148507731c6f229bd984acaa14e9cfdeee01823252d3737517ccab37a18316484e2cc5d273a53d2be375220ebdcf926e4e5d5f4089
 AUX carbon-c-relay.initd 1803 SHA256 a5d94eff2ddc73bd87c5d71695737d303bf6e7f6b822d9431013cbd97a6bce4a SHA512 8a2ab39aefd1e74a810175b93d2f82e24dc1f3ca39842720d3967db8e9d8e56e28026d685b8e8b1559a62b8c165da436363cb58c98af97e770489f8b8f5beedc WHIRLPOOL ded38a0747bcc160d6f80ef597313550acdacdd9747ecb1ca713a27cee6aecf7d7ecaba70853a20abe021347eb9813340440d1615b822a008d257bf5e7b0ab5b
 DIST carbon-c-relay-0.39.tar.gz 55308 SHA256 694cfb291981fda58930af09bd1563a20ca8e40839d8bdbda5b8403774cf391d SHA512 b7797f969bf3431f883a5e8288b748494a9c9d8448c7bcde6642b538e20c6fe99acc296ba7bc940739c53619ee672a46ff787c66d75900f45a057f2660da0e5f WHIRLPOOL 8e1b8646b720f2db3f1a556f57975c9556e4a0d3b36479b6ad58607abe0d9f2629ef7275def4ef6a9dc4b73268376fa07c78b8dac3bd5b8bd90ff70dd706f4cf
+DIST carbon-c-relay-0.40.tar.gz 57697 SHA256 38e3b93f4a46e72f11c30f84bd0a0a77862d8d3cd1904447678eabfce89a0468 SHA512 6d77d521eba6dfa576810f3e850f091431a76282f5c7c85a72af300cff18b0dec8738dd00d9555933fbf486ce9656ea4f06332644bfccc634078c90937705aaa WHIRLPOOL ddaf8d02168a10f1e0e2dd8701cd430aefe7346164016a41e25850b2871d541f9002c93063d0836d40caf6db2ff380183d8a4e145df89324be33ef22386bec39
 EBUILD carbon-c-relay-0.39-r1.ebuild 922 SHA256 5d0de5ddde9ff5b36e50785f7233aaf1b49594d886ab385a8db997b3012cce6f SHA512 01db384a3cee8104ad23350f72ba4b5d4c5cc8dc49b423c973c15190bf62caa0152a1175f79342b4dafeea5f10984379ce6bae4e78f2cc8087d94b236b334e0e WHIRLPOOL 17853caf97f5b0e4fee222ded12dc96b3cb8b4833b14434c7483ac67260f44c5fc70b486b0f601f4c119f461ff9877663f3f44d5fb9708bf4b90bfa680051017
-EBUILD carbon-c-relay-0.39.ebuild 686 SHA256 beb6314097fb0e44b680cf96cbad4dbb570f20f6f49b830938640ee38a357eb6 SHA512 77e3492f1a07762983398d127c7ea9b20f2b259e5bf8b061c996dff565cf652d3c3ff26cf6d0489291643fac7401562c36261395af10fe13210f589d77da0259 WHIRLPOOL daecce87a1d0da3f5df9e925a9f1c7b2f42dd06e45258befbf70d7dc141f1251e5298e3a883553986b7eedd5bca3951e57c7067b8a474087cc45c358a5aef25c
-MISC ChangeLog 1080 SHA256 483bd3e341d8cd424225b90dd57fa778c5b99ea297943f0f1141d6f87929d871 SHA512 c340d7ee1877868a2e960378890ad2cb733631f5a812757c341005e00345461b19353bfb2fb779bf27684ffbe5ebbbabe3862a86233454ee6d43c9f482902567 WHIRLPOOL 487871d5780a88b40083ec67bd3e6fd823fdf68afde60d7e208fef6676f28632fd150bbdeefd8ec65ed146a19504f7e9707804c2a0ced23d28e3b22a60a15480
+EBUILD carbon-c-relay-0.40.ebuild 975 SHA256 4b7d97c017193463f07fac6a033a72674b7c954e64c0aeb733a0bd1317203325 SHA512 fa16e62ac9174cd76cc6569729a7cba27faa06da4f0f4aacf62bf22a4ba0b0ec8d82ecec970d5a374acedc9623594a4889cd46181e7adb944c3930de74c9652c WHIRLPOOL 65e5b3e185ebdb9859e545aa1c9b3243a0466b688e7c0f1e10c9b3fd0aedc8b55cd96fef44c1cdd91b7cd4434b86d2583df7099688c3557cf1c4a7d371786b50
+MISC ChangeLog 1434 SHA256 478e406b0a71710fb9e7ac2ddcc3f11a567e974d67125982bf1d462b9bef9978 SHA512 6f969400024d1b428aa115c99acbea88b5d617e47d7b15dd3e9bc647153f2ea10a2ffd8b3ff0e241e9a3d7698c2265fc7ce57d101e78bc31e0b6da7b6ce5af6d WHIRLPOOL 22444323ab34f61b091d25d3dcdee924cdf9f4f006c9bda86407de8cc662c3546caab51c57ca1270dfe2d960b3c18cba2675765fc53bd655dc519e684c7f1cc0
 MISC metadata.xml 204 SHA256 f801b9c55778c244beaa88e48f4d6510a6be7c8261d6bf278ef3ddae82fb2d72 SHA512 d1bee6ffb9d47d4de14cc0a0a98045411efaecf51dd483b672f21af5b7f3a91bd22780f274439abdf89c526c9306fab52a13a8a730b73f08bd0e1c588530de2d WHIRLPOOL c242c00aea88439a3d1adf9b04309b6b140261ed16e0f1600a17aa06fa6c5c3811efe1a511b8d8b879e574a75616a32a211c42cc874e448c7834c8f036f57272
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVKa+YACgkQX3X2B8XHTolsdwCgltzG3ZtMocsq+d0b/Gfr3iwv
-aSUAn3JcfnzK3wrfLqwvjZI39q0BI6m8
-=ynCC
+iEYEAREIAAYFAlVUqBgACgkQX3X2B8XHTomsZwCeMdF+zBl4FO77Sf/8RBQ9JWBm
+wMAAnRjD5zTDVGxz19h9su1AWX8RoLLt
+=BWCy
 -----END PGP SIGNATURE-----
