@@ -1,8 +1,10 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/carbon-c-relay/carbon-c-relay-0.39.ebuild,v 1.1 2015/04/11 05:49:24 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/carbon-c-relay/carbon-c-relay-0.40.ebuild,v 1.1 2015/05/14 13:50:14 grobian Exp $
 
 EAPI=5
+
+inherit toolchain-funcs user
 
 DESCRIPTION="Enhanced C version of Carbon relay, aggregator and rewriter"
 HOMEPAGE="https://github.com/grobian/carbon-c-relay"
@@ -17,7 +19,20 @@ RDEPEND="dev-libs/openssl"
 DEPEND="virtual/pkgconfig
 	${RDEPEND}"
 
+pkg_preinst() {
+	enewgroup carbon
+	enewuser carbon -1 /bin/false /dev/null carbon
+}
+
+src_prepare() {
+	tc-export CC
+	tc-has-openmp || sed -i -e '/-fopenmp/s/^/#/' Makefile
+}
+
 src_install() {
 	newbin relay ${PN}
 	dodoc README.md
+
+	newinitd "${FILESDIR}"/${PN}.initd ${PN}
+	newconfd "${FILESDIR}"/${PN}.confd ${PN}
 }
