@@ -1,11 +1,0 @@
-DEFINED_PHASES=install
-DEPEND=virtual/pkgconfig dev-libs/openssl
-DESCRIPTION=Enhanced C version of Carbon relay, aggregator and rewriter
-EAPI=5
-HOMEPAGE=https://github.com/grobian/carbon-c-relay
-KEYWORDS=~amd64 ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris
-LICENSE=Apache-2.0
-RDEPEND=dev-libs/openssl
-SLOT=0
-SRC_URI=https://github.com/grobian/carbon-c-relay/archive/v0.39.tar.gz -> carbon-c-relay-0.39.tar.gz
-_md5_=ee66abe5ce58d68bcedfb73264d857f3
