@@ -1,0 +1,12 @@
+DEFINED_PHASES=install preinst prepare
+DEPEND=virtual/pkgconfig dev-libs/openssl
+DESCRIPTION=Enhanced C version of Carbon relay, aggregator and rewriter
+EAPI=5
+HOMEPAGE=https://github.com/grobian/carbon-c-relay
+KEYWORDS=~amd64 ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris
+LICENSE=Apache-2.0
+RDEPEND=dev-libs/openssl
+SLOT=0
+SRC_URI=https://github.com/grobian/carbon-c-relay/archive/v0.40.tar.gz -> carbon-c-relay-0.40.tar.gz
+_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=a5279ccc148ca9f7e4b4aab2e57040f9
